--- a/src/Layouts/Layout.fxml
+++ b/src/Layouts/Layout.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import java.lang.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.*?>
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="969.0" style="-fx-background-color: #373a3a;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainController">
    <children>
       <Canvas fx:id="canvas" height="615.0" layoutX="1.0" layoutY="26.0" width="969.0" />
@@ -61,17 +58,13 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" onAction="#onRestartClick" text="Reset/Restart" />
+                  <MenuItem mnemonicParsing="false" onAction="#onCloseClick" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#onAboutClick" text="About" />
             </items>
           </Menu>
         </menus>
@@ -88,7 +81,7 @@
             <Font name="David" size="17.0" />
          </font>
       </Label>
-      <Button onAction="#onSaveClick" layoutX="283.0" layoutY="604.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="417.0" style="-fx-background-color: #080808;" text="Save Score">
+      <Button layoutX="283.0" layoutY="604.0" mnemonicParsing="false" onAction="#onSaveClick" prefHeight="33.0" prefWidth="417.0" style="-fx-background-color: #080808;" text="Save Score">
          <textFill>
             <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
                <stops>
